# web-esp32

./: CMakeLists.txt  Readme.md  configure.ps1  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: contextholder.c.F451F2DCF9D2B1EB.idx  contextholder.h.7495FE89BC2AD4EF.idx  contextholder.h.BDFE6EEBCCFE2707.idx  filter.c.34A83208B0DA850A.idx  filter.h.52CED40BEA456DA2.idx  http-commons.c.917963DCC60A2DEF.idx  http-commons.h.11DD167CCABADE2A.idx  httpserver.c.05E4DAD0A808849B.idx  httpserver.c.D7BF3F73207BAE50.idx  httpserver.h.954ABDCF07AF94D6.idx  httpserver.h.DB04A03EFE667AEE.idx  load_fs.c.87C80DE5CB93A7CA.idx  load_fs.c.DD54C9D7520F7DFB.idx  load_fs.h.77DE2C00C2332591.idx  server.c.F73303C5C3111646.idx  server.h.17AED52927ECA3DE.idx  server.h.80873D90C2F81F9F.idx  web-esp32.c.B1704A3F4AC56FF1.idx  webesp32.c.03876C950AB34C15.idx  webesp32.h.600580E9DFB5D7F7.idx  wificlient.c.53C9CA3C5AF44B88.idx  wificlient.c.7F663C262DCA3953.idx  wificlient.h.4E1785DD2C2903DD.idx  wificlient.h.BAD8D37913E2A410.idx  wificlient.h.E69303F82CB75A79.idx
filesys/: load_fs.c
http/: contextholder.c  contextholder.h  filter.c  filter.h  http-commons.c  http-commons.h  httpserver.c  httpserver.h  server.c  server.h
main/: CMakeLists.txt  web-esp32.c
partition/: index.html
resources/: index.html
resources/_resources/css/: styles.css
webesp/: webesp32.c  webesp32.h
webesp/filesys/: load_fs.c  load_fs.h
webesp/http/: httpserver.c  httpserver.h
webesp/wifi/: wificlient.h
wifi/: wificlient.c
